@@ -35,10 +35,10 @@ public interface SearchStrategy extends Extension {
 	 * Performs initialization steps, such as the creation of indexes. It may be a no-op method, if no
 	 * specific initialization is required.
 	 */
-	void initialize(RepositoryConnection connection) throws Exception;
+	void initialize(RepositoryConnection connection, boolean forceCreation) throws Exception;
 
 	/**
-	 * Updates support resources (usually created inside {@link SearchStrategy#initialize(Project)}).
+	 * Updates support resources (usually created inside {@link SearchStrategy#initialize(RepositoryConnection)}).
 	 */
 	void update(RepositoryConnection connection) throws Exception;
 
