@@ -1,6 +1,9 @@
 version 10.1.2
 date: dd/mm/yyyy
   * Added localization for Spanish, thanks to Juan Antonio Pastor Sánchez for the contribution!
+  * updated the search functionalities for GraphDB v9.9.0+
+  * no longer possible to use a version of GraphDB minor than 9.7.0
+  * fixed a bug in the search on a GraphDB containing an Apostrophe or a \
 
 version 10.1.1
 date: 28/10/2021
